name:                hklaunch
version:             0.1.0.0
synopsis:            Initial project template from stack
description:         Please see README.md
homepage:            https://github.com/prikhi/hklaunch#readme
license:             GPL-3
license-file:        LICENSE
author:              Pavan Rikhi
maintainer:          pavan.rikhi@gmail.com
copyright:           2016 Pavan Rikhi
category:            Web
build-type:          Simple
-- extra-source-files:
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Lib
  build-depends:       base >= 4.7 && < 5
                     , ConfigFile
                     , directory
                     , mtl
  default-language:    Haskell2010

executable hklaunch
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , hklaunch
                     , brick
                     , vty
                     , vector
                     , mtl
                     , process
  default-language:    Haskell2010

test-suite hklaunch-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , hklaunch
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/prikhi/hklaunch
